--- a/index.html
+++ b/index.html
@@ -5,20 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #555;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
         #keyboard {
             background-color: #333;
             border: 1px solid black;
             padding: 200px 20px 30px 20px;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
         }
         #keypad {
-            background-color: red;
+            background-color: #000;
             display: flex;
+            width: 100%;
+            justify-content: center;
+            border-radius: 5px;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .whiteKey, .blackKey {
+            position: relative;
+            transition: all 0.1s ease-in-out;
+            cursor: pointer;
         }
         .whiteKey {
             height: 240px;
             width: 40px;
             background-color: white;
-            border: 1px solid black;
+            border: 1px solid #777;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+            box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
         }
         .blackKey {
             height: 140px;
@@ -27,73 +56,96 @@
             border: 1px solid black;
             margin: 0 -13px;
             z-index: 2;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            box-shadow: 0 3px 5px rgba(0,0,0,0.4);
+        }
+        .whiteKey:hover {
+            background-color: #f0f0f0;
+            box-shadow: inset 0 2px 4px rgba(0,0,0,0.4);
+        }
+        .blackKey:hover {
+            background-color: #333;
+            box-shadow: inset 0 2px 4px rgba(0,0,0,0.6);
+        }
+        .whiteKey:active {
+            background-color: #e0e0e0;
+            box-shadow: inset 0 4px 6px rgba(0,0,0,0.5);
+        }
+        .blackKey:active {
+            background-color: #222;
+            box-shadow: inset 0 3px 5px rgba(0,0,0,0.8);
+        }
+        .whiteKey span, .blackKey span {
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: 10px;
+            font-family: Arial, sans-serif;
+            user-select: none;
+        }
+        .whiteKey span {
+            color: #333;
+        }
+        .blackKey span {
+            color: #EEE;
         }
     </style>
 </head>
 <body>
     <div id="keyboard">
-        <div id="keypad">            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>            
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>
-            <div class="whiteKey"></div>
-            <div class="blackKey"></div>            
-            <div class="whiteKey"></div>                       
-            <div class="whiteKey"></div>
+        <div id="keypad">
+            <div class="whiteKey"><span>C</span></div>
+            <div class="blackKey"><span>C#</span></div>
+            <div class="whiteKey"><span>D</span></div>
+            <div class="blackKey"><span>Eb</span></div>
+            <div class="whiteKey"><span>E</span></div>
+            <div class="whiteKey"><span>F</span></div>
+            <div class="blackKey"><span>F#</span></div>
+            <div class="whiteKey"><span>G</span></div>
+            <div class="blackKey"><span>G#</span></div>
+            <div class="whiteKey"><span>A</span></div>
+            <div class="blackKey"><span>Bb</span></div>
+            <div class="whiteKey"><span>B</span></div>
+            <div class="whiteKey"><span>C</span></div>
+            <div class="blackKey"><span>C#</span></div>
+            <div class="whiteKey"><span>D</span></div>
+            <div class="blackKey"><span>Eb</span></div>
+            <div class="whiteKey"><span>E</span></div>
+            <div class="whiteKey"><span>F</span></div>
+            <div class="blackKey"><span>F#</span></div>
+            <div class="whiteKey"><span>G</span></div>
+            <div class="blackKey"><span>G#</span></div>
+            <div class="whiteKey"><span>A</span></div>
+            <div class="blackKey"><span>Bb</span></div>
+            <div class="whiteKey"><span>B</span></div>
+            <div class="whiteKey"><span>C</span></div>
+            <div class="blackKey"><span>C#</span></div>
+            <div class="whiteKey"><span>D</span></div>
+            <div class="blackKey"><span>Eb</span></div>
+            <div class="whiteKey"><span>E</span></div>
+            <div class="whiteKey"><span>F</span></div>
+            <div class="blackKey"><span>F#</span></div>
+            <div class="whiteKey"><span>G</span></div>
+            <div class="blackKey"><span>G#</span></div>
+            <div class="whiteKey"><span>A</span></div>
+            <div class="blackKey"><span>Bb</span></div>
+            <div class="whiteKey"><span>B</span></div>
+            <div class="whiteKey"><span>C</span></div>
+            <div class="blackKey"><span>C#</span></div>
+            <div class="whiteKey"><span>D</span></div>
+            <div class="blackKey"><span>Eb</span></div>
+            <div class="whiteKey"><span>E</span></div>
+            <div class="whiteKey"><span>F</span></div>
+            <div class="blackKey"><span>F#</span></div>
+            <div class="whiteKey"><span>G</span></div>
+            <div class="blackKey"><span>G#</span></div>
+            <div class="whiteKey"><span>A</span></div>
+            <div class="blackKey"><span>Bb</span></div>
+            <div class="whiteKey"><span>B</span></div>
+            <div class="whiteKey"><span>C</span></div>
         </div>
     </div>
 </body>
